# epic-alt-manager

./: .prettierrc  Cargo.toml
src/: config.rs  decrypt.rs  egl.rs  epic.rs  epic_clients.rs  launchers.rs  legendary.rs  main.rs  process.rs  version.rs
src/gui/: gui_constants.rs  gui_helper.rs  gui_renderer.rs  gui_workers.rs  gui_workers_proc.rs  mod.rs  window.rs
src/gui/windows/: add_account.rs  clone_configuration.rs  settings.rs
