[package]
name = "alt-manager"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
aes = "0.8.3"
base64 = "0.21.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", features = ["json"] }
rust-ini = "0.20.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
egui = { version = "0.24.0" }
eframe = { version = "0.24.0"}
egui_extras = { version = "0.24.0", features = ["all_loaders"] }
egui-toast = "0.10.0"
rfd = "0.11"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
    "Win32_Security",
]
